--- a/app.css
+++ b/app.css
@@ -1,5 +1,54 @@
+* {
+  box-sizing: border-box;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  margin-bottom: 3rem;
+}
+
 #home {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  width: 100vh;
+  height: 100vh;
+  display: flex;
   justify-content: center;
+  align-items: center;
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
+/* Buttons */
+
+.btn {
+  font-size: 1rem;
+  padding: 1rem 0;
+  width: 20rem;
+  text-align: center;
+  border: 0.1rem solid black;
+  border-radius: 2rem;
+  margin-bottom: 2rem;
+  text-decoration: none;
+  color: black;
+  background-color: white;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 1rem 1rem 0 rgba(102, 168, 135, 0.5);
+  transform: translateY(-0.1rem);
+  transition: transform 150ms;
+}
+
+.btn[:disabled]:hover{
+  cursor: not-allowed;
+  box-shadow: none;
+  transform: none;
 }
