added node modules to display api from server, created views folder structure to organize pages to display correct routes

--- a/views/end.ejs
+++ b/views/end.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Over!</title>
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="styles/app.css">
   <script defer src="end.js"></script>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div id="end">
       <h1>Congrats! you've completed the Tandem Quiz, Here's your final score</h1>
       <h1 id="finalScore">0</h1>
-      <a class="btn">Play Again!</a>
+      <a class="btn" href="/game">Play Again!</a>
     </div>
   </div>
 </body>
