--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tandem - Play</title>
-  <link rel="stylesheet" href="app.css"/>
-  <link rel="stylesheet" href="game.css"/>
-  <script defer src="game.js"></script>
+  <link rel="stylesheet" href="styles/app.css"/>
+  <link rel="stylesheet" href="styles/game.css"/>
+  <script defer src="scripts/game.js"></script>
 </head>
 <body>
   <div class="container">
