--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tandem Quiz</title>
-  <link rel="stylesheet" href="app.css"/>
+  <link rel="stylesheet" href="/styles/app.css"/>
 </head>
 <body>
   <div class="container">
     <div id="home">
     <h1>Tandem Quiz</h1>
-    <a class="btn" href="game.html">Play</a>
+    <a class="btn" href="/game">Play</a>
     </div>
   </div>
 </body>
