updated answer checker to show correct answer as an alert when wrong

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -14,29 +14,29 @@
       <div id="hud">
         <div id="hud-item">
           <p class="hud-title">Question</p>
-          <p class="hud-text" id="questionCounter">1/10</p>
+          <p class="hud-text" id="questionCounter"></p>
         </div>
         <div id="hud-item">
           <p class="hud-title">Score</p>
           <p class="hud-text" id="score">0</p>
         </div>
       </div>
-      <h2 id="question">What is the answer to this question?</h2>
+      <h2 id="question"></h2>
       <div class="choice-container">
         <p class="choice-type">A</p>
-        <p class="choice-text" data-number="0">Choice</p>
+        <p class="choice-text" data-number="1"></p>
       </div>
       <div class="choice-container">
         <p class="choice-type">B</p>
-        <p class="choice-text" data-number="1">Choice</p>
+        <p class="choice-text" data-number="2"></p>
       </div>
       <div class="choice-container">
         <p class="choice-type">C</p>
-        <p class="choice-text" data-number="2">Choice</p>
+        <p class="choice-text" data-number="3"></p>
       </div>
       <div class="choice-container">
         <p class="choice-type">D</p>
-        <p class="choice-text" data-number="3">Choice</p>
+        <p class="choice-text" data-number="4"></p>
       </div>
     </div>
   </div>
