--- a/views/end.ejs
+++ b/views/end.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Over!</title>
   <link rel="stylesheet" href="styles/app.css">
-  <script defer src="end.js"></script>
+  <script defer src="scripts/end.js"></script>
 </head>
 <body>
   <div class="container">
